@@ -1,3 +1,5 @@
+Added a horizontal axis for the bar chart
+Added a bar for sugar concentration
 Fixed: when you remove the solution, the concentration changes
 Fixed: the sim crashes when you empty out the entire solution
 Added a button that removes solutes from the sim
